<resources>
    <string name="app_name">Toys</string>
    <string name="txt_login">Login</string>
    <string name="hint_login">Informe o login</string>
    <string name="txt_senha">Senha</string>
    <string name="hint_senha">Informe sua senha</string>
    <string name="botao_login">Conectar</string>
    <string name="chk_manter">Manter conectado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
